crates/oxc_react_compiler/tests/snapshots/constant-propagation-exponent-non-finite.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/constant-propagation-exponent-non-finite.js
---
import { c as _c } from "react/compiler-runtime";
import { Stringify } from "shared-runtime";
function foo() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <Stringify value={[
			0 / 0,
			0 / 0,
			0 / 0,
			0 / 0,
			0 / 0,
			0 / 0,
			1,
			1,
			Infinity,
			0,
			0,
			Infinity,
			-0,
			0,
			-Infinity,
			Infinity,
			-Infinity,
			-0,
			0 / 0,
			1024
		]} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [],
	isComponent: false
};
