crates/oxc_react_compiler/tests/snapshots/constant-propagation-exponent-shadowed-nan.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/constant-propagation-exponent-shadowed-nan.js
---
import { c as _c } from "react/compiler-runtime";
import { Stringify } from "shared-runtime";
const NaN = 42;
function parameter(NaN) {
	return 0 / 0;
}
function destructured(t0) {
	return 0 / 0;
}
function local(props) {
	const NaN = props.value;
	return NaN + 0 / 0;
}
function outer() {
	return 0 / 0;
}
function assignment(NaN) {
	return 0 / 0;
}
function foo() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <Stringify value={[
			parameter(42),
			destructured({ NaN: 42 }),
			local({ value: 42 }),
			outer(),
			assignment(42)
		]} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [],
	isComponent: false
};
