crates/oxc_react_compiler/tests/snapshots/constant-propagation-for.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/constant-propagation-for.js
---
function foo() {
	let y = 0;
	for (const x = 100; false; 100) {
		y = y + 1;
	}
	return y;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [],
	isComponent: false
};
