crates/oxc_react_compiler/tests/snapshots/constant-propagation-phi.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/constant-propagation-phi.js
---
function foo(a, b, c) {
	if (a) {}
	return b;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
