crates/oxc_react_compiler/tests/snapshots/constant-propagation-string-concat.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/constant-propagation-string-concat.js
---
function foo() {
	return "abc";
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [],
	isComponent: false
};
