crates/oxc_react_compiler/tests/snapshots/constant-propagation-while.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/constant-propagation-while.js
---
function foo() {
	let y = 0;
	while (false) {
		y = y + 1;
	}
	return y;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [],
	isComponent: false
};
