crates/oxc_react_compiler/tests/snapshots/constant-propagation.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/constant-propagation.js
---
function foo() {
	console.log("foo");
	return -6;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [],
	isComponent: false
};
